# mopidy-webhooks

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yml  release.yml
mopidy_webhook/: __init__.py  ext.conf  frontend.py
mopidy_webhooks/: __init__.py  ext.conf  frontend.py  utils.py
mopidy_webhooks/reporters/: base.py  events.py  mixins.py  status.py
tests/: test_extension.py
testserver/: app.py  app.yaml
