[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]


[tool.black]
target-version = ["py38", "py39"]
line-length = 100


[tool.coverage.run]
branch = true
include = [
    "mopidy_webhooks/*",
]
omit = [
    "tests/*",
    "setup.py",
    "tasks.py",
]


[tool.coverage.report]
#fail_under = 98
exclude_lines = [
    "pragma: no cover",
    "noqa",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
lines_after_imports = 2
lines_between_sections = 1


[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.setuptools_scm]
