[metadata]
name = Mopidy-Webhooks
version = 0.0.0
url = https://github.com/paddycarey/mopidy-webhooks
author = Patrick Carey
author_email = paddy@wackwack.co.uk
license = Apache License, Version 2.0
license_file = LICENSE
description = A simple Mopidy extension that sends webhook notifications to a remote URL.
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    Mopidy >= 3.1.1
    Pykka >= 2.0.1
    setuptools
    requests >= 2.22


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    isort
    pep8-naming
test =
    pytest
    pytest-cov
typecheck =
    mypy
    types-requests
    types-setuptools
build =
    build
    twine
dev =
    wheel
    invoke
    %(lint)s
    %(test)s
    %(typecheck)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    webhooks = mopidy_webhooks:Extension


[flake8]
application-import-names = mopidy_webhooks, tests
max-line-length = 100
exclude = .git, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # flake8-isort
    I
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (replaced by Black)
    E203
    # E501: line too long (replaced by Black)
    E501
    # N818: exception class names with an 'Exception' suffix are perfectly fine
    N818
